Fixed horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,8 @@ html {
     font-weight: 400;
 }
 
-html {
+html,
+body {
     overflow-x: hidden;
 }
 
@@ -80,6 +81,10 @@ body {
     letter-spacing: 0.166667px;
     line-height: 1.7em;
     color: #4F4F4F;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 p {
